--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <!-- My script(s) -->
   <script src="js/Boot.js"></script>
   <script src="js/Preloader.js"></script>
+  <script src="js/Prototype.js"></script>
   <script src="js/main.js"></script>
 </head>
 
