Prototype: caught in movement hell
? Stuck between authentic Atari-style movement, the physics system in 
Phaser, not wanting to roll my own physics (to mimick Atari), 
janky-looking movement that's not janky in the right way... and on and 
on.

? Programming sucks sometimes.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   <!-- My script(s) -->
   <script src="js/Boot.js"></script>
+  <script src="js/Tank.js"></script>
   <script src="js/Prototype.js"></script>
   <script src="js/Preloader.js"></script>
   <script src="js/main.js"></script>
