Changed the title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
   <link rel="apple-touch-icon" sizes="144x144" href="apple-touch-icon.png">
 
-  <title>Combats</title>
+  <title>Combat at the movies</title>
 
   <!-- CSS stylesheet(s) -->
   <link rel="stylesheet" type="text/css" href="css/style.css" />
