--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <script src="js/Boot.js"></script>
   <script src="js/Tank.js"></script>
   <script src="js/Prototype.js"></script>
+  <script src="js/GameScene.js"></script>
+  <script src="js/CitizenKane.js"></script>
   <script src="js/Preloader.js"></script>
   <script src="js/main.js"></script>
 </head>
