L'Avventura: Created a starting point
? "Traced" the island (Isola di Lisca Bianca) in tiles. Changed some 
placeholder colors. Put the tank on the island. Search away!

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <script src="js/Prototype.js"></script>
   <script src="js/GameScene.js"></script>
   <script src="js/CitizenKane.js"></script>
+  <script src="js/Lavventura.js"></script>
   <script src="js/Preloader.js"></script>
   <script src="js/main.js"></script>
 </head>
