Rashomon: basic prototype works
? Quite nice to get this one working based on Phaser3's camera system. 
Definitely feeling an afinity/cooperation (and resistance) between 
Phaser3's API and the requirements of the films. Something to write more 
about tomorrow.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <script src="js/GameScene.js"></script>
   <script src="js/CitizenKane.js"></script>
   <script src="js/Lavventura.js"></script>
+  <script src="js/Rashomon.js"></script>
   <script src="js/Preloader.js"></script>
   <script src="js/main.js"></script>
 </head>
