--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <script src="js/CitizenKane.js"></script>
   <script src="js/Lavventura.js"></script>
   <script src="js/Rashomon.js"></script>
+  <script src="js/AuHasardBalthazar.js"></script>
   <script src="js/Preloader.js"></script>
   <script src="js/main.js"></script>
 </head>
