Taxi Driver: Basic version of tank and mirror going
? Disabled shooting and am vaguely assuming that if you're in the mirror 
and facing it you can say "Are you talkin' to me?" successfully and get 
a point? And if not then not? And that's it? Preeeeetty basic.

? More generally, I'm trying to find my way back into this project since 
it's been a while frankly.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <script src="js/Lavventura.js"></script>
   <script src="js/Rashomon.js"></script>
   <script src="js/AuHasardBalthazar.js"></script>
+  <script src="js/TaxiDriver.js"></script>
   <script src="js/Preloader.js"></script>
   <script src="js/main.js"></script>
 </head>
