--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <script src="js/Rashomon.js"></script>
   <script src="js/AuHasardBalthazar.js"></script>
   <script src="js/TaxiDriver.js"></script>
+  <script src="js/SomeLikeItHot.js"></script>
   <script src="js/Preloader.js"></script>
   <script src="js/main.js"></script>
 </head>
