--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <script src="js/AuHasardBalthazar.js"></script>
   <script src="js/TaxiDriver.js"></script>
   <script src="js/SomeLikeItHot.js"></script>
+  <script src="js/TheGodfather.js"></script>
   <script src="js/Preloader.js"></script>
   <script src="js/main.js"></script>
 </head>
