2001: A Space Odyssey: initial scene in place complete with monolith
? The black monolith (my only breaking of the palette) looks quite 
striking!

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <script src="js/TaxiDriver.js"></script>
   <script src="js/SomeLikeItHot.js"></script>
   <script src="js/TheGodfather.js"></script>
+  <script src="js/TwoThousandAndOneASpaceOdyssey.js"></script>
   <script src="js/Preloader.js"></script>
   <script src="js/main.js"></script>
 </head>
