AI Tank: Added a terrible "AI" tank
? It just blunders around taking no account of its environment. Could be 
better. How much better does it NEED to be though?

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <!-- My script(s) -->
   <script src="js/Boot.js"></script>
   <script src="js/Tank.js"></script>
+  <script src="js/AITank.js"></script>
   <script src="js/Prototype.js"></script>
   <script src="js/GameScene.js"></script>
   <script src="js/CitizenKane.js"></script>
