--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <script src="js/SomeLikeItHot.js"></script>
   <script src="js/TheGodfather.js"></script>
   <script src="js/TwoThousandAndOneASpaceOdyssey.js"></script>
+  <script src="js/BeauTravail.js"></script>
   <script src="js/Preloader.js"></script>
   <script src="js/main.js"></script>
 </head>
