--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <script src="js/TheGodfather.js"></script>
   <script src="js/TwoThousandAndOneASpaceOdyssey.js"></script>
   <script src="js/BeauTravail.js"></script>
+  <script src="js/TheConversation.js"></script>
   <script src="js/Preloader.js"></script>
   <script src="js/main.js"></script>
 </head>
