Menu: a basic menu appears!
? Nothing very special. Press the corresponding number key to load that 
game.

? I made them scroll in vaguely like movie credits which amuses me at 
least a little bit?

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <script src="js/TwoThousandAndOneASpaceOdyssey.js"></script>
   <script src="js/BeauTravail.js"></script>
   <script src="js/TheConversation.js"></script>
+  <script src="js/Menu.js"></script>
   <script src="js/Preloader.js"></script>
   <script src="js/main.js"></script>
 </head>
