Tokyo Story: added to the roster to replace Some Like It Hot
? Basic version right now is a slow, lone tank. Premise being its 
wife/enemy has died, leaving it to the battlefield to wait out the rest 
of its life.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <script src="js/Rashomon.js"></script>
   <script src="js/AuHasardBalthazar.js"></script>
   <script src="js/TaxiDriver.js"></script>
-  <script src="js/SomeLikeItHot.js"></script>
+  <script src="js/TokyoStory.js"></script>
   <script src="js/TheGodfather.js"></script>
   <script src="js/TwoThousandAndOneASpaceOdyssey.js"></script>
   <script src="js/BeauTravail.js"></script>
